# taktivitypub

./: .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
taktivitypub/: __init__.py  activity.py  actor.py  base.py  constants.py  create.py  document.py  emoji.py  exceptions.py  follow.py  hashtag.py  image.py  ld.py  mention.py  note.py  types.py
tests/: conftest.py  test_create.py  test_delete.py  test_follow.py  test_note.py  test_types.py
tests/data/: create-note-mastodon-followeronly.json  delete-tombstone.json  follow-mastodon.json  follow-with-embed.json  move-mastodon.json  note-1-mastodon.json  note-firefish.json  note-mastodon-basic.json  note-mastodon-tag-photo.json  person-mastodon.json  update-person-mastodon-move.json
